src/objects/Brackets_UserTournament__c.object
<CustomObject>
    <fields>
        <fullName>Brackets_Group__c</fullName>
        <label>Pool</label>
        <referenceTo>Brackets_Group__c</referenceTo>
        <relationshipName>UserTornaments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Brackets_Tournament__c</fullName>
        <label>Tournament</label>
        <referenceTo>Brackets_Tournament__c</referenceTo>
        <relationshipName>UserTornaments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Championship_Point_Prediction__c</fullName>
        <inlineHelpText>Used for breaking any ties.  Enter the total number of points scored by both teams in the championship game.</inlineHelpText>
        <label>Championship Point Prediction</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <summarizedField>Brackets_UserMatchPred__c.Points__c</summarizedField>
        <summaryForeignKey>Brackets_UserMatchPred__c.Brackets_UserTournament__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tiebreaker_Points__c</fullName>
        <formula>if (now() &gt;  Brackets_Group__r.Brackets_Tournament__r.End__c ,text(Championship_Point_Prediction__c) , &apos;xxx&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tiebreaker Points</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserTornaments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>IF( 
$User.Id ==  User__r.Id ,
HYPERLINK(&apos;/apex/BracketsPredictions?show=&apos; +  Brackets_Group__c  , &apos;Manage Predictions&apos;),  
HYPERLINK(&apos;/apex/BracketsPredictions?view=&apos; +  Id , &apos;Show Predictions&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Pool Members</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>User__c</columns>
        <columns>Brackets_Tournament__c</columns>
        <columns>Brackets_Group__c</columns>
        <columns>Points__c</columns>
        <columns>View__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Tournaments</fullName>
        <columns>User__c</columns>
        <columns>Points__c</columns>
        <columns>Brackets_Tournament__c</columns>
        <columns>Brackets_Group__c</columns>
        <columns>View__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Tournaments</label>
    </listViews>
    <nameField>
        <displayFormat>UT-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pool Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>